--- a/StormNet/StormNet.csproj
+++ b/StormNet/StormNet.csproj
@@ -10,6 +10,7 @@
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+      <PackageReference Include="QRCoder" Version="1.4.3" />
     </ItemGroup>
 
 </Project>
