--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "StormNet/wwwroot/PonyEditor"]
 	path = StormNet/wwwroot/PonyEditor
-	url = https://gitlab.com/stormworks-tools/editor.git
+	url = https://github.com/seweso/PonyLuaEditor.git
